--- a/udemy python/test.ipynb
+++ b/udemy python/test.ipynb
@@ -16,23 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e056b892",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "5\n",
-      "50\n",
-      "2.0\n",
-      "2\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "a = 10 \n",
@@ -68,74 +55,32 @@
    "execution_count": null,
    "id": "2968bd9b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apples', 'bananas', 'milk']\n",
-      "['apples', 'bananas', 'milk', 'bread']\n",
-      "['ketchup', 'apples', 'bananas', 'milk', 'bread']\n",
-      "['ketchup', 'apples', 'milk', 'bread']\n",
-      "bread\n",
-      "['ketchup', 'apples', 'milk', 'rice', 'butter']\n",
-      "['apples', 'butter', 'ketchup', 'milk', 'rice']\n",
-      "['rice', 'milk', 'ketchup', 'butter', 'apples']\n",
-      "['rice', 'milk', 'ketchup', 'butter', 'apples', 'juice', 'jam']\n",
-      "['rice', 'milk', 'ketchup', 'butter', 'apples', 'juice', 'jam', 'rice', 'milk', 'ketchup', 'butter', 'apples', 'juice', 'jam']\n",
-      "['t', 'o', 'm', 'a', 't', 'o', ' ', 'c', 'u', 'c', 'u', 'm', 'b', 'e', 'r', ' ', 's', 'p', 'i', 'n', 'a', 'c', 'h']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Shopping List\n",
-    "\n",
     "# You’re building a shopping list feature in a grocery app. You need to support various list operations such as adding items, removing them, merging with others, and handling user inputs from text.\n",
-    "\n",
     "# Tasks:\n",
-    "\n",
-    "#     Create a grocery list named my_cart with the items: \"apples\", \"bananas\", and \"milk\"\n",
-    "\n",
+    "#     Create a grocery list named my_cart with the items: \"apples\", \"bananas\", and \"milk\".\n",
     "#     Print the grocery list.\n",
-    "\n",
     "#     Add \"bread\" to the end of the list.\n",
-    "\n",
     "#     Print the updated grocery list.\n",
-    "\n",
     "#     Insert \"ketchup\" at the beginning of the list.\n",
-    "\n",
     "#     Print the updated grocery list.\n",
-    "\n",
     "#     Remove \"bananas\" from the list.\n",
-    "\n",
     "#     Print the updated grocery list.\n",
-    "\n",
     "#     Remove the last item from the list and store it in a variable named removed_item.\n",
-    "\n",
     "#     Print the value of removed_item.\n",
-    "\n",
     "#     Extend the grocery list by adding \"rice\" and \"butter\".\n",
-    "\n",
-    "#     Print the updated grocery list.\n",
-    "\n",
+    "#     Print the updated grocery list\n",
     "#     Sort the grocery list in alphabetical order.\n",
-    "\n",
     "#     Print the updated grocery list.\n",
-    "\n",
     "#     Reverse the order of the grocery list.\n",
-    "\n",
     "#     Print the updated grocery list.\n",
-    "\n",
     "#     Concatenate the grocery list with another list containing \"juice\" and \"jam\".\n",
-    "\n",
     "#     Print the resulting list.\n",
-    "\n",
     "#     Duplicate the grocery list twice.\n",
-    "\n",
     "#     Print the resulting list.\n",
-    "\n",
     "#     Define a string with the value \"tomato cucumber spinach\" and convert it into a list.\n",
-    "\n",
     "#     Print the converted list.\n",
     "\n",
     "my_cart = [\"apples\", \"bananas\", \"milk\"]\n",
@@ -169,51 +114,23 @@
    "execution_count": null,
    "id": "56a95ee3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'jam', 'butter', 'bread', 'milk'}\n",
-      "{'bread', 'ketchup', 'butter', 'cheese'}\n",
-      "{'jam', 'bread', 'milk', 'butter', 'cheese', 'ketchup'}\n",
-      "{'bread', 'butter'}\n",
-      "{'jam', 'milk'}\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Managing Store Inventory\n",
-    "\n",
     "# You’re managing product categories for a retail store. Your task is to identify:\n",
-    "\n",
     "#     Which products are available in which branches\n",
-    "\n",
     "#     What products are common\n",
-    "\n",
     "#     What products are missing in each branch\n",
-    "\n",
     "#     And which products should not be altered using frozenset\n",
-    "\n",
     "# Tasks:\n",
-    "\n",
     "#     Create a set branch_a_products with the items: \"bread\", \"milk\", \"butter\", \"jam\"\n",
-    "\n",
     "#     Create another set branch_b_products with the items: \"bread\", \"cheese\", \"butter\", \"ketchup\"\n",
-    "\n",
     "#     Print both sets.\n",
-    "\n",
     "#     Find and print the union of both branches’ products.\n",
-    "\n",
     "#     Find and print the intersection of both branches’ products.\n",
-    "\n",
     "#     Find and print the products that are in branch_a_products but not in branch_b_products.\n",
-    "\n",
     "#     Check whether \"ketchup\" is available in branch_a_products and print the result.\n",
-    "\n",
     "#     Define a frozenset called essential_items with values: \"milk\", \"bread\", \"ketchup\".\n",
-    "\n",
     "#     Print the frozenset.\n",
     "\n",
     "branch_a_products = {\"bread\", \"milk\", \"butter\", \"jam\"}\n",
@@ -233,23 +150,7 @@
    "execution_count": null,
    "id": "8e6e8eae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'John Doe', 'age': 32, 'city': 'New York'}\n",
-      "John Doe\n",
-      "New York\n",
-      "True\n",
-      "{'name': 'John Doe', 'city': 'New York', 'email': '', 'phone': ''}\n",
-      "{'name': 'John Doe', 'city': 'New York', 'email': '', 'phone': ''}\n",
-      "('phone', '')\n",
-      "None\n",
-      "{'name': 'John Doe', 'city': 'New York', 'email': '', 'address': '221B Baker Street'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Customer Profile Management\n",
     "\n",
@@ -322,18 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6dd75dff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You get a free dessert!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Restaurant Billing System\n",
     "# You’re designing a billing system for a restaurant. Depending on the total bill amount entered by the customer, they might get a free dessert.\n",
@@ -424,28 +317,7 @@
    "execution_count": null,
    "id": "6bfbeb29",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 : Radha\n",
-      "1 : harivansh\n",
-      "2 : radhavallabh\n",
-      "3 : vrindavan\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 'Radha'), (1, 'harivansh'), (2, 'radhavallabh'), (3, 'vrindavan')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Numbered Task List\n",
     "# You’re improving the UX of a task management app by numbering the user’s task list automatically.\n",
@@ -467,15 +339,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "35bacf3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "integer = [1, 2, 3, 4]\n",
-    "for i in integer :\n",
+    " #-----------------------------------------------------------  FUNCTIONS -----------------------------------------------------------------------------\n",
+    "# Student Grading System\n",
+    "# You’re building an academic grading system.\n",
+    "# Tasks:\n",
+    "#     Define a function calculate_grade(score) that:\n",
+    "#         Returns “A” for score ≥ 90\n",
+    "#         “B” for ≥ 75\n",
+    "#         “C” for ≥ 60\n",
+    "#         “D” for ≥ 40\n",
+    "#         “F” otherwise\n",
+    "#     Define a second function generate_student_report(name, score) that:\n",
+    "#         Uses the first function to determine the grade.\n",
+    "#         Returns a report string like: \"Aman has scored80 and received grade B\"\n",
+    "#     Write clean, reusable code using functions, conditions, and string formatting.\n",
     "\n",
-    "    pass\n"
+    "def calculate_grade(score):\n",
+    "    if score >= 90:\n",
+    "        return \"A\"\n",
+    "    elif score >= 75:\n",
+    "        return \"B\"\n",
+    "    elif score >= 60:\n",
+    "        return \"C\"\n",
+    "    elif score >= 40:\n",
+    "        return \"D\"\n",
+    "    else:\n",
+    "        return \"F\"\n",
+    "    \n",
+    "def generate_student_report(name, score):\n",
+    "    grade = calculate_grade(score)\n",
+    "    return \"{name} has scored{score} and received grade {grade}\""
    ]
   }
  ],
@@ -495,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
