--- a/udemy python/test.ipynb
+++ b/udemy python/test.ipynb
@@ -224,6 +224,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4dc53dba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6dd75dff",
    "metadata": {},
    "outputs": [],
@@ -374,6 +382,83 @@
     "def generate_student_report(name, score):\n",
     "    grade = calculate_grade(score)\n",
     "    return \"{name} has scored{score} and received grade {grade}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e5acdd88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def token_dispenser(start: int = 1):\n",
+    "    while True:\n",
+    "        yield start\n",
+    "        start += 1\n",
+    "        \n",
+    "\n",
+    "t = token_dispenser()\n",
+    "next(t)\n",
+    "next(t)\n",
+    "next(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "de0c9be0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 61, 63, 65, 67, 69, 71, 73, 75, 77, 79, 81, 83, 85, 87, 89, 91, 93, 95, 97, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [item for item in range(0, 101) if item % 2 != 0]\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c792a4ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for prime number\n",
+    "incoming = int(input(\"Enter a number: \"))\n",
+    "n = incoming -1\n",
+    "for n in range(2,incoming):\n",
+    "    # print(n)\n",
+    "    if incoming % n == 0:\n",
+    "        print(\"It is not a prime number\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"It is a prime number\")\n",
+    "        break"
    ]
   }
  ],
